# MemoryTitan

./: .env_example  GETTING_STARTED.md  README.md  __init__.py  basic_usage.py  document_question_answering.py  embedders.py  implementation_guide.md  llm_integration.py  memory_titan_cli.py  pyproject.toml  requirements.txt  run_example.py  setup.py  test_import.py  test_setup.py  titans_manager.py
core/: __init__.py  titans_manager.py
embedding/: __init__.py
examples/: README.md  basic_usage.py  document_qa.py  memory_chat.py
memory/: __init__.py  long_term_memory.py  persistent_memory.py  short_term_memory.py
