[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-titan"
version = "0.1.0"
description = "A vector database implementation inspired by the Titans paper for managing context windows with hierarchical memory systems"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
]

[project.optional-dependencies]
embedders = [
    "sentence-transformers>=2.2.0",
]
faiss = [
    "faiss-cpu>=1.7.0; platform_system!='Darwin'",
    "faiss-cpu>=1.7.0; platform_system=='Darwin' and platform_machine!='arm64'",
]
hnswlib = [
    "hnswlib>=0.6.0",
]
full = [
    "memory-titan[embedders,faiss,hnswlib]"
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "mypy>=0.900",
    "flake8>=3.9.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/memory-titan"
"Bug Tracker" = "https://github.com/yourusername/memory-titan/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "faiss.*",
    "hnswlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=memory_titan"
